--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -1,13 +1,24 @@
+@import url(https://fonts.googleapis.com/css?family=Walter+Turncoat);
+
+
+.boardContainer{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
 .MainContainer{
-    position: relative;
+    position: absolute;
     background-clip: content-box;
-    top: 0vh;
-    margin: 0 auto;
+    margin: 0px auto;
+    top: 120px;
     height: 40vh;
     width: 60vw;
     border: 20px solid #272020;
     border-radius: 20px ;
     background: #228538;
+    box-shadow:  0px 15px 15px 15px rgba(0,0,0,0.5);
+
 }
 
 .instructionBox{
@@ -21,21 +32,82 @@
     z-index: 99999;
 }
 
+.startBtn{
+    margin: 0 auto;
+}
+
 .textBox{
     width: 100%;
     height: 100%;
+    font-size: 40px;
+     color: #E8E8E8;
+    font-family: "Walter Turncoat", "cursive";
 }
 
 .character{
     position: absolute;
-    bottom:0;
+    bottom:-330px;
     left: 20px;
     width: 40%;
-    /* background: #45BADD; */
     border-radius: 5px;
 }
 
 .character img{
-    width: 80%;
+    width: 70%;
     border-radius: 5px;
+}
+
+.buttonContainer{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn{
+    padding: 10px;
+    margin: 5px;
+}
+
+
+.formulaImage{
+    box-shadow:  0px 15px 15px 15px rgba(0,0,0,0.5);
+    border-radius: 20px;
+
+}
+
+@keyframes fadeIn {
+	0% { opacity: 0; }
+	20% { opacity: 0; }
+	60% { opacity: 1; }
+	100% { opacity: 1; }
+}
+
+.fadeInClass {
+	animation-name: fadeIn;
+	animation-duration: 2s;
+	animation-iteration-count: 1;
+	animation-direction: alternate;
+	animation-timing-function: linear;
+}
+
+.formulaContainer{
+    display: inline-block;
+    width: 290px;
+    height: 200px;
+    padding: 20px 0;
+    margin: 0 10px;
+}
+
+.formulaContainer img{
+    width: 100%;
+    border-radius: 20px;
+    box-shadow:  0px 15px 15px 15px rgba(0,0,0,0.5);
+}
+
+/* calculation */
+.textBox .calcHeading{
+    font-size: 25px !important ;
 }
