--- a/src/css/Coin.css
+++ b/src/css/Coin.css
@@ -2,12 +2,15 @@
 .container{
     background-color: #ffffff;
     width: 300px;
-    padding: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
     position: absolute;
-    bottom: 0;
-    right: 60px;
+    bottom: 10px;
+    right: 310px;
     margin: 6px;
-    box-shadow: 15px 30px 35px rgba(0,0,0,0.1);
+    box-shadow:  0px 15px 15px 15px rgba(0,0,0,0.5);
     border-radius: 10px;
     -webkit-perspective: 300px;
     perspective: 300px;
@@ -16,9 +19,9 @@
     display: flex;
     color: #101020;
     font-weight: 500;
-    padding: 20px;
-    margin-bottom: 40px;
-    margin-top: 10px;
+    padding: 5px;
+    margin-bottom: 10px;
+    margin-top: 5px;
     box-shadow: 0 0 20px rgba(0,139,253,0.25);
 
 }
@@ -29,7 +32,7 @@
     height: 150px;
     width: 150px;
     position: relative;
-    margin: 32px auto;
+    margin: 0 auto;
     -webkit-transform-style: preserve-3d;
             transform-style: preserve-3d;
 }
