--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -13,7 +13,7 @@
     margin: 0px auto;
     top: 120px;
     height: 40vh;
-    width: 60vw;
+    width: 50vw;
     border: 20px solid #272020;
     border-radius: 20px ;
     background: #228538;
@@ -27,33 +27,36 @@
     margin: 0 auto;
     position: relative;
     top: 20px;
-    max-width: 80%;
+    max-width: 90%;
     text-align: justify;
     z-index: 99999;
 }
-
-.startBtn{
-    margin: 0 auto;
+.startCont{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .textBox{
     width: 100%;
     height: 100%;
-    font-size: 40px;
+    font-size: 25px;
      color: #E8E8E8;
     font-family: "Walter Turncoat", "cursive";
 }
 
 .character{
     position: absolute;
-    bottom:-330px;
+    bottom:-45vh;
     left: 20px;
     width: 40%;
     border-radius: 5px;
 }
 
 .character img{
-    width: 70%;
+    width: 100%;
     border-radius: 5px;
 }
 
@@ -71,10 +74,18 @@
     margin: 5px;
 }
 
+.boardFormulaContainer{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
 
 .formulaImage{
     box-shadow:  0px 15px 15px 15px rgba(0,0,0,0.5);
     border-radius: 20px;
+    /* max-width: 40vw; */
+    max-width:40vw;
+    max-height: 30vh;
 
 }
 
@@ -98,28 +109,24 @@
     width: 290px;
     height: 200px;
     padding: 20px 0;
-    margin: 0 10px;
+    margin: 0 20px ;
 }
 
 .formulaContainer img{
     width: 100%;
     border-radius: 20px;
+    margin-bottom: 10px;
     box-shadow:  0px 15px 15px 15px rgba(0,0,0,0.5);
 }
 
 /* calculation */
 .calculationContainer{
    width: 100%;
-   font-size: 20px;
+   font-size: 18px;
 }
 .calcHeading{
-    font-size: 35px;
     font-weight: bold;
 } 
-
-.calculationContainer p{
-    font-size: 20px;
-}
 
 .calc{
     display: flex;
@@ -127,7 +134,6 @@
 }
 
 .calcLHS{
-    font-size: 18px;
     margin: 0 10px;
 }
 
@@ -137,4 +143,5 @@
 
 .row1{
     border-bottom: 3px solid;
+
 }
