--- a/src/css/Coin.css
+++ b/src/css/Coin.css
@@ -1,14 +1,14 @@
 
 .container{
     background-color: #ffffff;
-    width: 300px;
+    width: 250px;
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 20px;
     position: absolute;
     bottom: 10px;
-    right: 310px;
+    right: 23.5vw;
     margin: 6px;
     box-shadow:  0px 15px 15px 15px rgba(0,0,0,0.5);
     border-radius: 10px;
@@ -28,21 +28,24 @@
 .stats p:nth-last-child(1){
   margin-left: 50%;
 }
+.coinContainer{
+    display: flex;
+    justify-content: c;
+}
+
 .coin{
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
     position: relative;
-    margin: 0 auto;
+    margin: 10px auto;
     -webkit-transform-style: preserve-3d;
             transform-style: preserve-3d;
 }
 .coin img{
-    width: 145px;
+    width: 120px;
 }
 .heads,.tails{
     position: absolute;
-    width: 100%;
-    height: 100%;
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
 }
@@ -70,7 +73,7 @@
     justify-content: space-between;
 }
 button{
-    width: 130px;
+    width: 100px;
     padding: 15px 0;
     border: none;
     font-size: 16px;
