--- a/src/css/Popup.css
+++ b/src/css/Popup.css
@@ -1,32 +1,37 @@
+/* *{
+    margin: 0;
+    padding: 0;
+} */
+
 .popUpContainer{
     position: absolute;
     right: -35px;
-    width: 50vw;
-    display: flex;
-    flex-direction: column;
+    width: 40vw;
+    /* display: flex; */
+    /* flex-direction: column; */
     background: #e1e0ee;
-    padding: 20px;
+    padding: 10px 20px;
     border-radius: 20px;
     box-shadow:  0px 15px 15px 15px rgba(0,0,0,0.5);
     font-family: "Walter Turncoat", "cursive";
     /* visibility:hidden; */
     display: none;
+    height: 22vh;
 }
-
-
-.inputContainer{
-    display: flex;
-    flex-direction: column;
-}
-
-.inputContainer label{
-    margin-bottom:5px ;
-}
-
-.inputContainer input{
-    padding: 5px;
-    width: 75%;
+.popUpContainer h2{
     margin-bottom: 10px;
+}
+
+
+.popUp input{
+    width: 150px;
+    margin-bottom: 2px;
+    cursor: pointer;
+}
+
+.formCont{
+    display: flex;
+    justify-content: space-between;
 }
 
 .closeButton{
@@ -35,6 +40,16 @@
     cursor: pointer;
     top: 0;
     right: 10px;
+}
+.submit{
+    display: flex;
+    justify-content: center;
+}
+.submit button{
+    width: 100px;
+    border-radius: 10px;
+    background-color: #053469;
+    color:white;
 }
 
 @keyframes fadeIn {
@@ -51,3 +66,36 @@
 	animation-direction: alternate;
 	animation-timing-function: linear;
 }
+#HEAD{
+    margin-left: 1vw;
+
+}
+#TAIL{
+    margin-left: 1.6vw;
+}
+
+
+.radioLable{
+    font-size: 20px;
+    /* display: block; */
+    /* align-items: center; */
+}
+
+.radioCont{
+    display: flex;
+    align-items: center;
+    width: 8vw;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.imageCont{
+    width:150px;
+    position: absolute;
+    right: 30px;
+    top:10px
+}
+.imageCont img{
+    width: 100%;
+}
+  
