--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -4,7 +4,7 @@
 .boardContainer{
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    min-height: fit-content;
 }
 
 
@@ -42,6 +42,7 @@
 }
 
 .textBox{
+    padding: 0 20px;
     width: 100%;
     height: 100%;
     font-size: 25px;
@@ -69,6 +70,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    z-index: 100;
 }
 
 .btn{
@@ -106,6 +108,8 @@
 	animation-timing-function: linear;
 }
 
+/* sidebar imaged */
+
 .formulaContainer{
     display: inline-block;
     width: 290px;
@@ -119,6 +123,11 @@
     border-radius: 20px;
     margin-bottom: 10px;
     box-shadow:  0px 15px 15px 15px rgba(0,0,0,0.5);
+    cursor: pointer;
+}
+
+.formulaContainer img:hover{
+    transform: scale(1.02);
 }
 
 /* calculation */
