--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -20,6 +20,7 @@
     border-radius: 20px ;
     background: #228538;
     box-shadow:  0px 15px 15px 15px rgba(0,0,0,0.5);
+    z-index: 20;
 
 }
 
