--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -10,6 +10,7 @@
     color: white;
     font-family: 'Times New Roman', Times, serif;
     font-size: 1.5rem;
+    z-index: -10;
 }
 
 .navContainer ul {
