--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -31,7 +31,7 @@
     top: 20px;
     max-width: 80%;
     text-align: justify;
-    z-index: 99999;
+    z-index: 90;
     height: 30vh;
     overflow: scroll;
     overflow-x: hidden;
@@ -89,6 +89,10 @@
     display: flex;
     justify-content: space-between;
     z-index: 100;
+}
+
+.speak-btn{
+    cursor: pointer;
 }
 
 .btn{
