--- a/src/css/Theory.css
+++ b/src/css/Theory.css
@@ -41,8 +41,11 @@
   margin: 10px;
 }
 
-.container{
+.theory_container{
   display: flex;
+  background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+    font-family: 'Roboto Slab', serif;
+    font-size: 18px;
 }
 .aside-container{
   border: 1px solid black;
