urls been assigned to navbar and some css changes

--- a/src/css/Theory.css
+++ b/src/css/Theory.css
@@ -44,7 +44,7 @@
 .theory_container{
   padding: 18px;;
   display: flex;
-  background-image: linear-gradient(to top, #656768 0%, #5b5c5c 99%);
+  background-image: linear-gradient(to top, #8f9294 0%, #bdbdbd 99%);
     font-family: 'Roboto Slab', serif;
     font-size: 18px;
 }
