--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,6 +2,8 @@
     margin: 0;
 }
 
+
+
 .navContainer{
     display: flex;
     align-items: center;
@@ -27,6 +29,12 @@
     max-width: 60px;
     padding: 10px;
     margin-right: 50px;
+}
+
+.navContainer ul a{
+    text-decoration: none !important;
+    color: #FFFFFF;
+
 }
 
 .navContainer h2{
