--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -88,7 +88,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    z-index: 100;
+    z-index: 1000001;
 }
 
 .speak-btn{
@@ -98,6 +98,14 @@
 .btn{
     padding: 10px;
     margin: 5px;
+    border: 1px solid #272020;
+    background: #f2f2f2;
+}
+.prev-btn:hover:not([disabled]) ,.next-btn:hover:not([disabled]) {
+    background-color: #674706;
+    color: #f2f2f2;
+    /* border: 1px solid #f2f2f2; */
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
 .boardFormulaContainer{
@@ -225,4 +233,17 @@ display: flex;
 justify-content: center;
 flex-wrap: wrap;
 width:100%;
+}
+
+.swal-button-container{
+    width: auto;
+}
+
+.swal-button{
+    background-color: #228538;
+    width: fit-content;
+}
+
+.swal-button:hover{
+    background-color: #228538 !important;
 }
