--- a/src/css/Quizcontainer.css
+++ b/src/css/Quizcontainer.css
@@ -30,8 +30,8 @@
   /* width: 10vw; */
   display: flex;
   width: 100%;
-    justify-content: flex-start;
-  margin-left: 10px;
+  justify-content: flex-start;
+  /* margin-left: 10px; */
 }
 .radioLable{
     margin-left: 10px;
@@ -234,3 +234,14 @@
     padding: 5px;
   }
  
+
+ .Next-level-btn{
+  background-color: #228538;
+  }
+
+  .repeat-level-btn{
+    background-color: #053469;
+  }
+  .repeat-level-btn:hover{
+    background-color: #053469 !important;
+  }
