--- a/src/css/Dice.css
+++ b/src/css/Dice.css
@@ -171,3 +171,10 @@ animation: fadeUp 0.3s forwards;
   bottom: 20px;
 }
 }
+
+.swal-button--cancel{
+  background-color: #f2f2f2 !important;
+}
+.swal-button--cancel:hover{
+  background-color: #c3baba !important;
+}
