--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -88,7 +88,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    z-index: 1000001;
+    z-index: 99;
 }
 
 .speak-btn{
