--- a/src/components/Quiz/Styles/Quiz.css
+++ b/src/components/Quiz/Styles/Quiz.css
@@ -1,5 +1,40 @@
-.Quiz_container{
-    width: 100vw;
-    height: 100vh;
-    background-color: red;
+.Quiz_container {
+  width: 100vw;
+  height: 100vh;
+  background-color: red;
+}
+
+.question_contaainer {
+  background-color: rgb(181, 224, 224);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.question_text {
+  padding: 0 20px;
+  font-size: xx-large;
+}
+
+.options_main_container {
+    display: flex;
+    flex-direction: column;
+    margin: 10px 20px;
+}
+.options_container{
+    width: 80%;
+    text-align: left;
+}
+.option_number{
+    font-size: large;
+    margin: 0 10px;
+}
+.submit_button_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.submit_button{
+    width: 50%;
 }
