--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -1,5 +1,5 @@
 
-
+/* 
   #webapp_cover {
     position: absolute;
      top: 8%;
@@ -124,5 +124,20 @@
     100% {
       transform: rotateZ(0);
     }
-  }
+  } */
   
+  .css-1nvnyqx-MuiPaper-root-MuiDrawer-paper{
+    position: absolute !important;
+    right: 0 !important;
+  }
+
+  .css-10hburv-MuiTypography-root{
+    color: rgb(43, 41, 41);
+    font-size: 25px;
+    /* text-align: center; */
+  }
+  .css-10hburv-MuiTypography-root:hover{
+    font-size: 20px;
+    text-decoration: underline;
+    color: rgba(65, 23, 23, 0.852);
+  }
