--- a/src/components/Quiz/Styles/Quiz.css
+++ b/src/components/Quiz/Styles/Quiz.css
@@ -5,7 +5,7 @@
 }
 
 .question_contaainer {
-  background-color: rgb(181, 224, 224);
+  /* background-color: rgb(181, 224, 224); */
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -15,6 +15,7 @@
 .question_text {
   padding: 0 20px;
   font-size: xx-large;
+  color: white;
 }
 
 .options_main_container {
@@ -23,8 +24,11 @@
     margin: 10px 20px;
 }
 .options_container{
-    width: 80%;
+    width: 90%;
     text-align: left;
+    margin-bottom: 5px;
+    padding:10px;
+    display: flex;
 }
 .option_number{
     font-size: large;
@@ -37,4 +41,7 @@
 }
 .submit_button{
     width: 50%;
+    background-color: #674706;
+    color: white;
+    font-size: 20px;
 }
