--- a/src/css/Theory.css
+++ b/src/css/Theory.css
@@ -45,6 +45,7 @@
   padding: 18px;;
   display: flex;
   background-image: linear-gradient(to top, #8f9294 0%, #bdbdbd 99%);
+  /* background-color: #f2f2f274; */
     font-family: 'Roboto Slab', serif;
     font-size: 18px;
 }
