--- a/src/components/Quiz/Styles/Quiz.css
+++ b/src/components/Quiz/Styles/Quiz.css
@@ -1,7 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
+.quiz_main{
+  background-image: url("../../../../public/bg.jpg");
+}
+
 .Quiz_container {
   width: 100vw;
   height: 100vh;
-  background-color: red;
+  /* background-color: red; */
 }
 
 .question_contaainer {
@@ -10,12 +16,17 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  /* border: 2px solid white; */
+  /* box-shadow: 0 0 15px #ffffff86; */
+  border-radius: 10px;
 }
 
 .question_text {
   padding: 0 20px;
   font-size: xx-large;
   color: white;
+  font-family: 'Rubik';
+  font-weight: 400;
 }
 
 .options_main_container {
@@ -24,11 +35,13 @@
     margin: 10px 20px;
 }
 .options_container{
-    width: 90%;
+    width: 94%;
     text-align: left;
     margin-bottom: 5px;
     padding:10px;
     display: flex;
+    font-family: 'Rubik';
+    border: 1px solid green;
 }
 .option_number{
     font-size: large;
