--- a/src/components/Quiz/Styles/Start.css
+++ b/src/components/Quiz/Styles/Start.css
@@ -1,26 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
+
 .start_container{
-    width: 60%;
+    width: 50%;
+    flex-direction: column;
     /* display: flex; */
     /* justify-content: center; */
     align-items: center;
     background-color: #228538;
+    justify-content: space-between;
     margin: 0 auto;
     /* height: 80%; */
     border-radius: 20px;
     z-index: 1;
     padding: 25px;
     border: 20px solid #272020;
-    /* background-image: url('/public/quiz_img.jpg'); */
-    /* background-repeat: no-repeat; */
-    /* background-size: contain; */
-    /* background-position: center; */
+    color: #FFF;
     height: 400px;
 }
+
+.start_container_quiz{
+    width: 60%;
+}
+
 
 
 .start_heading{
     font-size: 30px;
-    font-family: 'Times New Roman', Times, serif;
+    margin-bottom: 20px;
+    font-family: 'Rubik';
+    font-weight: 400;
     /* margin-bottom: 15px; */
 }
 
@@ -36,6 +44,8 @@
     color: white;
     outline: none;
     border: none;
+    font-family: 'Rubik';
+    font-weight: 350;
 }
 
 .result_container{
@@ -43,10 +53,28 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    color: #FFF;
 }
 .bg-success{
     background-color: green;
+    /* color: #FFF; */
 }
 .bg-danger{
     background-color: red;
+    /* color: white; */
+}
+
+.btn-success{
+    background-color: green;
+    color: #FFF;
+    outline:none;
+    border: none;
+    border: 1px solid white;
+}
+
+.btn-danger{
+    background-color: red;
+    color: #FFF;
+    outline: none;
+    border: none;
 }
