--- a/src/css/Theory.css
+++ b/src/css/Theory.css
@@ -1,254 +1,159 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
 
-@import url('https://fonts.googleapis.com') ;
-@import url('https://fonts.gstatic.com');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&family=Roboto+Slab:wght@300;400&display=swap');
 
-/* .h1{
-    display: flex;
-    justify-content: center;
-    background-color: white;
-    opacity: 90%;
-  }
-  body{
-    background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
-    font-family: 'Roboto Slab', serif;
-    font-size: 18px;
-    
-  } */
-  
-   .theory_box{
-    width: 900px;
-     display:block;
-    padding:auto;
-  margin:auto 3em; 
-  border: 1px solid black;
-  border-left: 8px solid black;
-  text-align:centre;
+.theory_box {
+  width: 900px;
+  display: block;
+  padding: auto;
+  margin: auto 3em;
+  margin-left: 0;
+  text-align: centre;
+  padding: 1rem 0rem;
+  font-family: "Rubik";
   /* background-color: blue; */
-  } 
-  
-.theory_obj{
-  /* background-color: black; */
-  margin: 10px;
-  }
-.theory{
-  /* background-color: black; */
+}
+
+.theory_obj {
+  margin-bottom: 10px;
+}
+
+.theory {
+  margin-top: 10px;
+
+}
+
+.theory_lrnoutcome {
   margin: 10px;
 }
 
-.theory_lrnoutcome{
-  /* background-color: black; */
-  margin: 10px;
-}
-
-.theory_container{
-  padding: 18px;;
+.theory_container {
+  padding: 1rem 4rem 2rem 4rem;
   display: flex;
-  background-image: linear-gradient(to top, #8f9294 0%, #bdbdbd 99%);
-  /* background-color: #f2f2f274; */
-    font-family: 'Roboto Slab', serif;
-    font-size: 18px;
+  /* background-image: linear-gradient(to top, #8f9294 0%, #bdbdbd 99%); */
+  background-color: #f6f6f6;
+  font-family: 'Roboto Slab', serif;
+  font-size: 18px;
 }
-.theory_aside-container{
-  border: 1px solid black;
+
+.theory_aside-container {
+  /* border: 1px solid black; */
   width: 500px;
   display: block;
   justify-content: center;
+  border-left: 1px solid #000;
+  padding: 1rem 20px;
   /* height: 500px; */
 }
 
 
+#theory_fst-img {
+  width: 400px;
+  margin: 20px auto;
+  padding: auto;
+  display: block;
+  border-radius: 40px;
+  border: 2px solid black;
 
-  /* Design starts */
-  /*
-.animation{
-    position: absolute;
-    top: calc(50%-50px);
-    left: calc(50%-50px);
-    width: 100px;
-    height: 100px;
-    transform: rotate(-45deg);
-    display: flex;
-    justify-content: center;
-  }
+  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
+  /* border-style:inset */
+}
 
-.animation li{
-    position: relative;
-    width: 150px;
-    height: 350px;
-     list-style: none; 
-    float: left;
-  }
+#theory_trd-img {
+  width: 400px;
+  margin: 20px auto;
+  padding: auto;
+  display: block;
+  border: 2px solid black;
+  border-radius: 40px;
+  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
+}
 
-.animation li::before{
-    content: '';
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    transform-origin: 100% 100%;
-    animation: animate 2.65s linear infinite;
-  }
-
-.animation li:nth-child(1){
-    transform: rotate(0deg);
-
-  }
-.animation li :nth-child(1)::before{
-    animation-delay: 0s;
-    background-color: #3fc1c9;
-  }
-.animation li:nth-child(2){
-    transform: rotate(90deg);
-  }
-.animation li :nth-child(2)::before{
-    animation-delay: 0.4s;
-    background-color: #fc5185;
-  }
-.animation li:nth-child(3){
-    transform: rotate(270deg);
-  }
-.animation li :nth-child(3)::before{
-    animation-delay: 1.2s;
-    background-color: #fbf288;
-  }
-
-.animation li:nth-child(4){
-    transform: rotate(180deg);
-  }
-.animation li :nth-child(4)::before{
-    animation-delay: 0.8s;
-    background-color: #5d25a4;
-  }
-
-@keyframes animate{
-    0%{
-      transform: perspective(200px) rotateX(0deg) ;
-      opacity:0;
-    }
-
-
-    10%{
-      transform: perspective(200px) rotateX(-180deg) ;
-      opacity:0;
-    }
-
-    25%{
-      transform: perspective(200px) rotatX(0deg) ;
-      opacity:1;
-    }
-
-    75%{
-      transform: perspective(200px) rotateX(0deg) ;
-      opacity:0;
-    }
-
-    90%{
-      transform: perspective(200px) rotateY(180deg) ;
-      opacity:0;
-    }
-
-    100%{
-      transform: perspective(200px) rotateY(0deg) ;
-      opacity:0;
-    }
-  }
- */
-  /* Design ends*/
-
-  #theory_fst-img{
-    width: 400px;
-    margin: 20px auto;
-    padding: auto;
-    display: block;
-    border-radius: 40px;
-    border: 4px solid black;
-    box-shadow: 4px 4px 4px 4px #414849 ;
-    /* border-style:inset */
-  }
-  
-  #theory_trd-img{
-    width: 400px;
-    margin: 20px auto;
-    padding: auto;
-    display: block;
-    border: 4px solid black;
-    border-radius: 40px;
-    box-shadow: 4px 4px 4px 4px #414849 ;
-  }
-.theory_trd{
+.theory_trd {
   /* border: 2px solid black; */
   width: 450px;
   display: block;
   margin: auto;
-  padding: auto;
+  padding: 1rem 0;
 }
-#theory_c1{
+
+#theory_c1 {
   display: flex;
   justify-content: center;
-  text-decoration: underline;
 }
 
-#theory_snd-img{
+#theory_snd-img {
   width: 400px;
-  border: 4px solid black;
+  border: 2px solid black;
   border-radius: 40px;
-    margin: 20px auto;
-    padding: auto;
-    display: block;
-    box-shadow: 4px 4px 4px 4px #414849 ;
-}
-
-
-
-#theory_frt-img{
-  width: 400px;
-  border: 4px solid black;
-  border-radius: 40px;
-    margin: 20px auto;
-    padding: auto;
-    display: block;
-    box-shadow: 4px 4px 4px 4px #414849 ;
-}
-
-.theory_h1{
-  font-size: 24px;
-}
-.theory_h2{
-  font-size: 23px;
-}
-.theory_h3{
-  font-size: 22px;
-  padding-left: 35px;
-}
-.theory_h4{
-  font-size: 21px;
-  text-decoration: underline;
-}
-.theory_h5{
-  font-size: 20px;
-}
-.theory_h6{
-  font-size: 19px;
-} 
-
-.theory_li-span{
+  margin: 20px auto;
+  padding: auto;
   display: block;
-  
+  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+
+
+#theory_frt-img {
+  width: 400px;
+  border: 2px solid black;
+  border-radius: 40px;
+  margin: 20px auto;
+  padding: auto;
+  display: block;
+  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+.theory_h1 {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.theory_h2 {
+  font-size: 23px;
+  font-weight: 500;
+}
+
+.theory_h3 {
+  font-size: 22px;
+  font-weight: 500;
+  margin-top: 10px;
+  margin-bottom: 5px;
+
+}
+
+.theory_h4 {
+  font-weight: 500;
+  font-size: 21px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.theory_h5 {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.theory_h6 {
+  font-size: 19px;
+  font-weight: 500;
+}
+
+.theory_li-span {
+  display: block;
+
   margin: 0px auto;
   padding: auto;
 }
 
-#theory_terms{
+#theory_terms {
   width: 95%;
-  border: 4px solid black;
+  border: 2px solid black;
   border-radius: 40px;
   display: block;
   margin: auto;
-  padding: auto;
-  box-shadow: 4px 4px 4px 4px #414849 ;
+  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
 }
-.theory_p{
-  padding-left: 25px;
+
+.theory_p {
+  /* padding-left: 25px; */
 }
