--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
+
 *{
     margin: 0;
 }
+
 
 
 
@@ -13,6 +16,9 @@
     font-family: 'Times New Roman', Times, serif;
     font-size: 1.5rem;
     z-index: -10;
+    font-family: "Rubik";
+    
+    
 }
 
 .navContainer ul {
@@ -43,4 +49,5 @@
     left:0;
     width: 100%;
     margin-left: 330px;
+    font-weight: 500;
 }
